# Solana_AIAgent_Proof

./: .gitignore  01-project-overview.md  02-architecture.md  03-onchain-program.md  04-witness-node.md  05-ai-risk-monitor.md  05-whitepaper.md  06-frontend.md  07-sdk.md  08-deployment.md  09-demo-scripts.md  2026-04-25-agent-score-platform-design.md  2026-04-25-agent-score-platform.md  README.md
agentproof/: .env.example  .gitignore  Anchor.toml  Cargo.toml  IMPROVEMENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  temp_output.md  tsconfig.json
agentproof/app/: .env.local.example  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
agentproof/audit-engine/: .env.example  package-lock.json  package.json
agentproof/intent-engine/: graph.py  main.py  requirements.txt
agentproof/keys/: .gitkeep
agentproof/programs/agentproof/: Cargo.toml
agentproof/programs/agentproof/src/: errors.rs  lib.rs
agentproof/programs/agentproof/src/instructions/: create_task.rs  freeze_agent.rs  initialize_witness_pool.rs  mod.rs  register_agent.rs  register_witness.rs  settle_task.rs  submit_proof.rs  witness_sign.rs
agentproof/programs/agentproof/src/state/: agent_record.rs  mod.rs  task_escrow.rs  task_proof.rs  witness_pool.rs
agentproof/risk-monitor/: .env.example  chain_freezer.py  chain_reader.py  db.py  main.py  requirements.txt
agentproof/sdk/: package.json
data/: agentproof.db
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
rentagents-design/: CLAUDE.md  DESIGN.md  SKILL.md
(+62 files in other folders)
