[package]
name = "agentproof"
version = "0.1.0"
description = "AgentProof - Verifiable AI Agent Behavior Oracle on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentproof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["token_2022", "metadata"] }
spl-token-2022 = { version = "3.0.0", features = ["no-entrypoint"] }
