[package]
name = "agentproof"
version = "0.1.0"
description = "AgentProof - Verifiable AI Agent Behavior Oracle on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentproof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1", features = ["token_2022", "metadata"] }
